---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2021-07-26
  Changes:
    - Minor refactor
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2021-07-25
  Features:
    - Schall's compatibility (some recipes)
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2021-07-21
  Features:
    - True Nukes compatibility
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2021-07-21
  Changes:
    - AAI/SE: Tungsten carbide coal recipe improved.
    - Foundry+AAI/SE: Tungsten carbide coal recipe removed.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2021-07-10
  Features:
    - Fluid amount settings
  Fixes:
    - German locale fixes, thanks to Yokmp
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2021-07-06
  Fixes:
    - German locale fixes, thanks to Yokmp
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2021-07-06
  Features:
    - Bob's MCI (bobplates) compatibility. If you use bob's library without bobplates, you might
      Need to re-research tungsten processing. Nothing else should change.
    - Useful equipment compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2021-07-05
  Features:
    - German locale, thanks to Yokmp
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2021-07-04
  Features:
    - Rocket silo construction, One more tier compatibility